// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit data set handler should return correct message if the data set is submit successfully. 1`] = `
Object {
  "jobid": "jobid1",
  "jobname": "jobname1",
}
`;

exports[`Submit data set handler should return correct message if the data set is submit successfully. 2`] = `
Object {
  "fields": Array [
    "jobid",
    "jobname",
    "owner",
    "status",
  ],
  "format": "object",
  "output": Object {
    "jobid": "jobid1",
    "jobname": "jobname1",
  },
}
`;
